[package]
name = "emacs-rs-module"
version = "0.1.2"
authors = ["Nguyễn Tuấn Anh <ubolonton@gmail.com"]
description = "An Emacs dynamic module that can (re)load other dynamic modules"
license = "BSD-3-Clause"
homepage = "https://github.com/ubolonton/emacs-rs-module"
repository = "https://github.com/ubolonton/emacs-rs-module"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.34"
libloading = "0.4.3"
lazy_static = "1.0.0"
emacs_module_bindings = "0.7.0"
